Update field fireUrl of entity Contract, purpose of creating a contract is to include the corresponding file; the details page allows you to view the file's details, add payroll list person for employee, manager